--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,9 +21,14 @@ footer{
 }
 
 header{
-    font-size: 5em;
-    color: red;
+    font-size: 2em;
+    color: blue;
+    font-style: italic;
 }
+
+
+
+
  body {
    
   }
